tests/errors/sem.expected-variable.address-op.or
main :: () -> void {
    &(5 + 4);
};
